--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-stack-grid": "^0.7.2",
     "@types/shortid": "^0.0.29",
-    "@types/store": "^2.0.2",
     "@types/webpack": "^4.41.6",
     "@types/webpack-dev-server": "^3.10.0",
     "@types/webpack-env": "^1.15.1",
@@ -130,7 +129,7 @@
     "react-stack-grid": "^0.7.1",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.1.3",
-    "store": "^2.0.12",
+    "store2": "^2.13.1",
     "supports-webp": "^2.0.1",
     "url-search-params-polyfill": "^8.1.1",
     "use-async-effect": "^2.2.5"
