--- a/package.json
+++ b/package.json
@@ -131,8 +131,7 @@
     "socket.io-client": "^4.1.3",
     "store2": "^2.13.1",
     "supports-webp": "^2.0.1",
-    "url-search-params-polyfill": "^8.1.1",
-    "use-async-effect": "^2.2.5"
+    "url-search-params-polyfill": "^8.1.1"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
