--- a/package.json
+++ b/package.json
@@ -35,15 +35,14 @@
     "url": "https://github.com/kokororin/pixiv.moe/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/plugin-transform-async-to-generator": "^7.14.5",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
+    "@babel/plugin-transform-async-to-generator": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^27.4.0",
     "@types/jszip": "^3.4.1",
@@ -54,13 +53,13 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-stack-grid": "^0.7.2",
     "@types/shortid": "^0.0.29",
-    "@types/webpack": "^4.41.6",
-    "@types/webpack-dev-server": "^3.10.0",
-    "@types/webpack-env": "^1.15.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.16.3",
     "@types/webpack-merge": "^5.0.0",
+    "@types/workbox-webpack-plugin": "^5.1.8",
     "all-contributors-cli": "^6.13.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-import": "^1.13.0",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-import": "^1.13.3",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.0.9",
     "cross-env": "^7.0.3",
@@ -70,32 +69,31 @@
     "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-webpack-plugin": "^3.1.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^4.0.4",
+    "fork-ts-checker-webpack-plugin": "^7.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "lint-staged": "^12.3.2",
-    "open-browser-webpack-plugin": "^0.0.5",
     "prettier": "~2.0.4",
     "react-hot-loader": "4.13.0",
     "rimraf": "^3.0.2",
     "simple-progress-webpack-plugin": "^2.0.0",
-    "sw-precache-webpack-plugin": "^1.0.0",
     "ts-jest": "^27.1.3",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^5.8.0"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.68.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-manifest-plugin": "^4.1.1",
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -108,6 +106,7 @@
     "ahooks": "^3.1.9",
     "animation-frame": "^0.3.0",
     "classnames": "^2.3.1",
+    "core-js": "^3.20.3",
     "dayjs": "^1.10.7",
     "honoka": "^0.5.2",
     "inobounce": "^0.2.0",
@@ -126,6 +125,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-stack-grid": "^0.7.1",
+    "regenerator-runtime": "^0.13.9",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.1.3",
     "store2": "^2.13.1",
